# minecraft

./: CMakeLists.txt  README.md
include/: block.h  chunk.h  config.h  player.h  utils.h  world.h
src/: block.cpp  chunk.cpp  main.cpp  mouse.cpp  player.cpp  ui.cpp  utils.cpp  world.cpp
